<resources>
    <string name="app_name">BookShare</string>
    <string name="sms_login"><u>短信验证码登录</u></string>
    <string name="forget_psw"><u>忘记密码</u></string>
    <string name="twopsw_not_equal">两次密码不一致</string>
    <string name="forget_psw_title">忘记密码</string>
    <string name="regist"><u>用户注册</u></string>
    <string name="about_us">关于</string>
    <string name="login_third">其他登录方式</string>
    <string name="feed_back">意见反馈</string>
    <string name="import_excel">导入</string>
    <string name="export_excel">导出书籍清单</string>
    <string name="no_user">无此用户</string>
    <string name="server_err">服务器出错，请稍后再试</string>
    <string name="regist_err">注册失败，code=</string>
    <string name="modify_psw">修改密码</string>
    <string name="my_borrow_beg_record">我发送的求借请求</string>
    <string name="regist_succ">注册成功,请登录!</string>
    <string name="usernameOccupation">用户名已被注册</string>
    <string name="phone">手机号</string>
    <string name="err_phone">手机号码格式错误</string>
    <string name="modify_succ">修改成功!</string>
    <string name="err_request">请求出错，请稍后重试</string>
    <string name="export_err">导出错误</string>
    <string name="err_old_psw">原密码错误</string>
    <string name="neednot_chat_myself">无需跟自己聊天</string>

    <string name="username">用户名</string>
    <string name="input_username">请输入用户名</string>
    <string name="loading">请稍候…</string>
    <string name="password">密码</string>
    <string name="oldPsw">原密码</string>
    <string name="newPsw">新密码</string>
    <string name="input_old_psw">请输入原密码</string>
    <string name="input_new_psw">请输入新密码</string>
    <string name="re_password">再次输入密码</string>
    <string name="verifycode">发送验证码</string>
    <string name="input_verifycode">请输入验证码</string>
    <string name="input_phone">请输入手机号码</string>
    <string name="input_phone_forget_psw">请输入注册时的手机号</string>
    <string name="phoneOccupation">该手机号已被使用</string>
    <string name="input_psw">请输入密码</string>
    <string name="nowordsig">这个家伙很懒，什么都没留下</string>
    <string name="export_tip">确定要导出我的书籍清单么？</string>

<!-- 高德导航start-->
    <string name="title_main">高德定位SDK功能展示</string>

    <string name="title_location">获取定位数据</string>
    <string name="location">获取定位数据</string>
    <string name="location_dec">调用定位接口获取定位数据</string>

    <string name="title_geoFence">地理围栏</string>
    <string name="geoFence">地理围栏</string>
    <string name="geoFence_dec">展示地理围栏功能</string>

    <string name="roundGeoFence">圆形地理围栏</string>
    <string name="roundGeoFence_dec">展示圆形地理围栏</string>
    <string name="address">%1$s%2$s</string>
    <string name="polygonGeoFence">多边形地理围栏</string>
    <string name="polygonGeoFence_dec">展示多边形地理围栏</string>

    <string name="keywordGeoFence">关键字地理围栏</string>
    <string name="keywordGeoFence_dec">展示关键字地理围栏</string>

    <string name="nearbyGeoFence">周边地理围栏</string>
    <string name="nearbyGeoFence_dec">展示周边地理围栏</string>

    <string name="districtGeoFence">行政区划地理围栏</string>
    <string name="districtGeoFence_dec">展示行政区划地理围栏</string>

    <string name="multipleGeoFence">综合展示</string>
    <string name="multipleGeoFence_dec">综合展示地理围栏的功能</string>


    <string name="oldGeoFence">旧版地理围栏</string>
    <string name="oldGeoFence_dec">旧版地理围栏，不建议使用</string>



    <string name="title_assistantLocation">H5辅助定位</string>
    <string name="assistantLocation">H5辅助定位</string>
    <string name="assistantLocation_dec">展示H5辅助定位功能</string>

    <string name="title_tools">地图计算工具</string>
    <string name="tools">地图计算工具</string>
    <string name="tools_dec">坐标转换等功能演示</string>

    <string name="title_lastLocation">获取最后一次位置</string>
    <string name="lastLocation">获取最后一次位置</string>
    <string name="lastLocation_dec">获取最后一次定位的位置，此位置是一个历史位置</string>


    <string name="title_alarmCPU">定时唤起CPU</string>
    <string name="alarmCPU">定时唤起cpu</string>
    <string name="alarmCPU_dec">通过一个闹钟程序后台定时唤起cpu</string>

    <string name="title_errorCode">错误码说明</string>
    <string name="errorCode">错误码说明</string>

    <string name="error_network">搜索失败,请检查网络连接！</string>
    <string name="error_key">key验证无效！</string>
    <string name="error_other">未知错误，请稍后重试!错误码为</string>
    <string name="press_more_then_exit">再按一次退出程序</string>
    <string name="error_no_result">对不起，没有搜索到相关数据！</string>
    <string name="error_no_more_item">"没有数据了"</string>
    <string name="error_socket_timeout">连接超时</string>
    <string name="error_scode">安全码错误</string>
    <string name="error_table_id">tableID不存在</string>
    <string name="error_chat">抱歉,对方已限制您的聊天请求</string>
    <string name="at_your_in_group">%s在群聊中@了你</string>
    <string name="error_route_result_walk">抱歉，没有帮您规划出合适的步行路线</string>
    <string name="error_route_result_bus">抱歉，没有帮您规划出合适的公交路线</string>
    <string name="error_route_result_drive">抱歉，没有帮您规划出合适的驾车路线</string>
    <string name="errorCode_dec">错误码说明以及对应的解决方法</string>

    <string name="defaultInteval">2000</string>
    <string name="defaultHttpTimeout">30000</string>

    <string name="battery_saving">低功耗模式</string>
    <string name="device_sensors">仅设备模式</string>
    <string name="hight_accuracy">高精度模式</string>
    <string name="interval">定位周期(ms)</string>
    <string name="httpTimeout">网络超时(ms)</string>
    <string name="location_once">单次定位</string>
    <string name="needAddress">逆地理编码</string>
    <string name="cacheAble">开启缓存</string>
    <string name="onceLastest">提高首次定位精度</string>
    <string name="gpsFirst">GPS优先</string>
    <string name="useSensor">使用传感器</string>
    <string name="wifiScan">开启wifi扫描</string>

    <string name="alarmInterval">唤醒周期(s)</string>

    <string name="startLocation">开始定位</string>
    <string name="stopLocation">停止定位</string>

    <string name="fenceRadius">围栏半径</string>
    <string name="meter">米</string>
    <string name="activatesAction">触发条件</string>
    <string name="alertIn">进入</string>
    <string name="alertOut">离开</string>
    <string name="alertStated">停留</string>
    <string name="addFence">添加围栏</string>
    <string name="removeFence">移除围栏</string>

    <string name="hideOption">隐藏设置</string>
    <string name="showOption">显示设置</string>

    <string name="showList">显示列表</string>
    <string name="hideList">隐藏列表</string>

    <string name="fence_round">圆形围栏</string>
    <string name="fence_polygon">多边形</string>
    <string name="fence_keyword">关键字围栏</string>
    <string name="fence_nearby">周边围栏</string>
    <string name="fence_district">行政区划围栏</string>

    <string name="getLastLocation">获取最后位置</string>

    <string name="startAssistantLocation">启动H5辅助定位</string>
    <string name="stopAssistantLocation">停止H5辅助定位</string>
    <string name="urlLocation">浏览器定位</string>
    <string name="assistantLocationInfo">辅助定位已经启动，请点击模拟浏览器请求或者在浏览器中输入http://127.0.0.1:43689/进行测试</string>

    <string name="coordinateConvert">坐标转换</string>
    <string name="checkIsChina">位置区域判断</string>

    <string name="notifyTitle">提示</string>
    <string name="notifyMsg">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。</string>
    <string name="setting">设置</string>
    <string name="cancel">取消</string>

    <!-- 主页 IndexActivity-->
    <string name="locate_fail">定位失败</string>
    <string name="pull_label">上拉加载...</string>
    <string name="refresh_label">正在载入...</string>
    <string name="release_label">放开加载更多...</string>

    <!-- 城市列表 -->
    <string name="city_used">常用城市</string>
    <string name="city_get_error">获取城市列表失败，请重试</string>
    <string name="city_search_none">没有找到</string>
    <string name="detail_title_des">详情页</string>
    <string name="city_search_hint">搜索</string>
    <string name="route_suggestion_walk">距离较近，建议您步行</string>


	<string name="errorCodeInfo">
	    0	定位成功。	可以在定位回调里判断定位返回成功后再进行业务逻辑运算\n
	    1	一些重要参数为空，如context；	请对定位传递的参数进行非空判断\n
	    2	定位失败，由于仅扫描到单个wifi，且没有基站信息。	请重新尝试\n
	    3	获取到的请求参数为空，可能获取过程中出现异常。	请对所连接网络进行全面检查，请求可能被篡改\n
	    4	请求服务器过程中的异常，多为网络情况差，链路不通导致	请检查设备网络是否通畅\n
	    5	返回的XML格式错误，解析失败。	请稍后再试\n
	    6	定位服务返回定位失败。	请将errorDetail（通过getLocationDetail()方法获取）信息通过工单系统反馈给我们\n
	    7	KEY鉴权失败。	请仔细检查key绑定的sha1值与apk签名sha1值是否对应，或通过高频问题查找相关解决办法\n
	    8	Android exception常规错误	请将errordetail（通过getLocationDetail()方法获取）信息通过工单系统反馈给我们\n
	    9	定位初始化时出现异常。	请重新启动定位\n
	    10	定位客户端启动失败。	请检查AndroidManifest.xml文件是否配置了APSService定位服务\n
	    11	定位时的基站信息错误。	请检查是否安装SIM卡，设备很有可能连入了伪基站网络\n
	    12	缺少定位权限。	请在设备的设置中开启app的定位权限\n
	    13     定位失败，由于设备未开启WIFI模块或未插入SIM卡，且GPS当前不可用。 建议开启设备的WIFI模块，并将设备中插入一张可以正常工作的SIM卡，或者检查GPS是否开启；如果以上都内容都确认无误，请您检查App是否被授予定位权限\n
	    14  GPS 定位失败，由于设备当前 GPS 状态差。 建议持设备到相对开阔的露天场所再次尝试\n
	    15     定位结果被模拟导致定位失败。 如果您希望位置被模拟，请通过setMockEnable(true);方法开启允许位置模拟\n
	    16     当前POI检索条件、行政区划检索条件下，无可用地理围栏。 建议调整检索条件后重新尝试，例如调整POI关键字，调整POI类型，调整周边搜区域，调整行政区关键字等\n
	    17     相同的地理围栏已经存在，无需重复添加\n
	</string>
    <string name="confirm">确定</string>
    <string name="newbookcheckin">新书登记</string>
    <string name="manage_book">书籍管理</string>
    <string name="no_result">对不起，没有搜索到相关数据!</string>
    <string name="no_next_page">对不起，没有更多结果了！</string>
    <string name="detail">详情</string>
    <string name="current_city_is">当前城市</string>
    <string name="default_city">北京</string>
    <string name="scan_input">扫码录入(推荐)</string>
    <string name="borrow_in">我的借入</string>
    <string name="swap_skill">我的技能交换</string>
    <string name="all_my_book">我的书架</string>
    <string name="my_share">我的分享</string>
    <string name="borrow_out">借出的书籍</string>
    <string name="logout">注销登录</string>
    <string name="blackhome">我的小黑屋</string>
    <string name="update">检查更新</string>
    <string name="manual_input">手动录入书籍信息</string>
    <string name="findbookFriend">找书友</string>
    <string name="change_city">更换</string>
    <string name="edittext_hint">输入用户名、位置</string>
    <string name="edittext_hint2">输入用户名</string>
    <string name="noDataDec">没有找到相关书籍信息哦</string>
    <!-- 高德导航end-->
    <!-- 城市选择页 -->
    <string name="city_choose_title">城市选择</string>
    <string name="go_here">去这里</string>
    <string name="detail_call">打电话</string>

    <!-- 关键字检索页 -->
    <string name="there_is_no_data">没有获得到数据</string>
    <string name="network_error">网络错误</string>

    <!-- 地图页 -->
    <string name="map_title">用户</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="book_name">书名</string>
    <string name="material_title">标题</string>
    <string name="book_classify">类别</string>
    <string name="album_name">Camera</string>

    <string name="_jiantou">右侧箭头</string>
    <string name="search_book">书籍搜索</string>

    <string name="session">消息</string>
    <string name="address_book">通讯录</string>
    <string name="were_mentioned">[有人@我]</string>
    <string name="tab_homepage">分享中心</string>
    <string name="tab_mesg">会话</string>
    <string name="tab_contact_list">通讯录</string>
    <string name="tab_exchange_market">交换市场</string>
    <string name="tab_personal">我</string>
    <string name="em_user_remove">此用户已被移除</string>
    <string name="user_forbidden">用户被服务器限制连接</string>
    <string name="lost_conn">与服务器失去连接,请重新登录</string>
    <string name="connect_conflict">同一帐号已在其他设备登录</string>
    <string name="contact_way">联系方式</string>
    <string name="not_fill">未填写</string>
    <string name="emojicon_test_name">Test</string>

    <string-array name="bookType">
        <item>普通书籍</item>
        <item>手写资料(笔记)</item>
    </string-array>
</resources>
