<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroud_white"
    android:orientation="vertical">

    <include
        layout="@layout/title_bar"
        android:visibility="visible" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:background="@color/backgroud_btn"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingStart="5dp"
            android:paddingEnd="1dp"
            android:gravity="start|center_vertical"
            android:text="@string/username"
            android:textSize="18sp" />

        <View
            android:layout_width="1.0px"
            android:layout_height="fill_parent"
            android:background="#ffd2d2d2" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/aet_login_name"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="4"
            android:layout_marginStart="5dp"
            android:hint="@string/input_username"
            android:background="@null"
            android:maxLength="11" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:background="@color/backgroud_btn"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingStart="5dp"
            android:paddingEnd="1dp"
            android:gravity="start|center_vertical"
            android:text="@string/password"
            android:textSize="18sp" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/aet_psw"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="50dp"
            android:hint="密码"
            android:maxLength="15"
            android:layout_marginStart="5dp"
            android:background="@null"
            android:inputType="textPassword" />

        <View
            android:layout_width="1.0px"
            android:layout_height="fill_parent"
            android:background="#ffd2d2d2" />

    </LinearLayout>


    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn_sel"
        android:text="登录"
        android:textColor="@color/btn_text_color"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_sms_login"
            android:layout_width="0dp"
            android:clickable="true"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sms_login"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_forget_psw"
            android:layout_width="0dp"
            android:clickable="true"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/forget_psw"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tv_regist"
            android:clickable="true"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/regist"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>