<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/title_bar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:background="@color/backgroud_btn"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingStart="5dp"
            android:paddingEnd="1dp"
            android:gravity="start|center_vertical"
            android:text="@string/phone"
            android:textSize="18sp" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/aet_phone"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="4"
            android:layout_marginStart="5dp"
            android:hint="@string/input_phone"
            android:background="@null"
            android:inputType="phone"
            android:maxLength="11" />

        <View
            android:layout_width="1.0px"
            android:layout_height="fill_parent"
            android:background="#ffd2d2d2" />

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:paddingEnd="1dp"
            android:gravity="center"
            android:text="@string/verifycode"
            android:background="@drawable/btn_sel"
            android:textColor="@color/backgroud_white"
            android:textSize="17sp"
            android:id="@+id/btn_sendverifycode" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/aet_verifycode"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="50dp"
            android:hint="@string/input_verifycode"
            android:maxLength="6"
            android:layout_marginStart="15dp"
            android:gravity="center"
            android:background="@color/backgroud_btn"
            android:inputType="number" />

        <View
            android:layout_width="1.0px"
            android:layout_height="fill_parent"
            android:background="#ffd2d2d2" />

    </LinearLayout>


    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn_sel"
        android:text="登录"
        android:textColor="@color/btn_text_color"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

    </LinearLayout>


</LinearLayout>