<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@mipmap/bacgroud"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent">

    <include layout="@layout/title_bar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/backgroud_btn"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:paddingStart="5dp"
            android:paddingEnd="1dp"
            android:gravity="center"
            android:text="@string/oldPsw"
            android:id="@+id/textView" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/aet_old_psw"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:layout_weight="4"
            android:background="@null"
            android:inputType="textPassword"
            android:maxLength="11" />

        <View
            android:layout_width="1.0px"
            android:layout_height="fill_parent"
            android:background="@color/ver_line" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/backgroud_btn"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:paddingStart="5dp"
            android:paddingEnd="1dp"
            android:gravity="center"
            android:text="@string/newPsw"
            />

        <View
            android:layout_width="1.0px"
            android:layout_height="fill_parent"
            android:background="@color/ver_line" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/aet_new_psw"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="4"
            android:layout_marginStart="5dp"
            android:background="@null"
            android:inputType="textPassword"
            android:maxLength="11" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn_sel"
        android:text="@string/confirm"
        android:textColor="@color/btn_text_color"
        android:textSize="20sp" />
</LinearLayout>